Fix wrong text alignment on session_complete page
Change from centered to left-adjusted.

--- a/guesstheracetrack/static/css/session_complete.css
+++ b/guesstheracetrack/static/css/session_complete.css
@@ -23,7 +23,6 @@ body {
 
 .overview {
   color: #23252c;
-  text-align: center;
   font-size: 1.5rem;
   margin: auto;
 }
